Mapa com Plotly - Marcação de pontos e mapa dark  #Please enter the commit message for your changes. Lines starting

--- a/plotly/mapa-cafes-plotly.ipynb
+++ b/plotly/mapa-cafes-plotly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,60 +15,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cafeteria     object\n",
+       "Mês           object\n",
+       "Lat          float64\n",
+       "Long         float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv('../data-cafe.csv', encoding='utf-8')\n",
-    "df.columns = ['Cafeteria', 'Mês', 'Lat', 'Long']"
+    "df.columns = ['Cafeteria', 'Mês', 'Lat', 'Long']\n",
+    "\n",
+    "# df['Lat'] = df.Lat.apply(str)\n",
+    "# df['Long'] = df.Long.apply(str)\n",
+    "\n",
+    "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['-15.83066', '-15.74704', '-15.86577', '-15.81226', '-15.75927', '-15.77004', '-15.83286', '-15.8352', '-15.74702', '-15.84346', '-15.79548', '-15.8338']\n"
+     ]
+    }
+   ],
    "source": [
-    "points_lat = []\n",
-    "points_long = []\n",
     "names = []\n",
+    "latitude = [] \n",
+    "longitude = []\n",
     "\n",
     "for i in range(df.shape[0]):\n",
-    "    points_lat.append(df['Lat'][i])\n",
-    "    points_long.append(df['Long'][i])\n",
     "    names.append(df['Cafeteria'][i])\n",
-    "    "
+    "    latitude.append(str(round(df['Lat'][i], 5)))\n",
+    "    longitude.append(str(round(df['Long'][i], 5)))\n",
+    "    \n",
+    "print(latitude)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [\n",
+    "data = [ \n",
     "    go.Scattermapbox(\n",
-    "        lat=points_lat,\n",
-    "        lon=points_long,\n",
-    "        mode='markers',\n",
-    "        marker=dict(\n",
-    "            size=14\n",
-    "        ),\n",
-    "        text=names,\n",
+    "            lat=latitude,\n",
+    "            lon=longitude,\n",
+    "            mode='markers',\n",
+    "            marker=dict(\n",
+    "                size=10,\n",
+    "                color='white' \n",
+    "            ),\n",
+    "            text=names,\n",
     "    )\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,20 +101,20 @@
     "    mapbox=dict(\n",
     "        accesstoken=mapbox_access_token,\n",
     "        bearing=0,\n",
+    "        style ='mapbox://styles/mapbox/dark-v9',\n",
     "        center=dict(\n",
-    "            lat=-15.8155646,\n",
-    "            lon=-48.0072168\n",
+    "            lat=-15.81556,\n",
+    "            lon=-48.00721\n",
     "        ),\n",
     "        pitch=0,\n",
-    "        zoom=10.5,\n",
-    "        style='dark'\n",
+    "        zoom=10\n",
     "    ),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +126,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
